Get запит та його обробка

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,48 @@
 @import './common';
 @import './example';
+
+.search-form {
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 30px;
+background-color: rgb(35, 12, 130);
+padding: 20px;
+};
+input{
+  font-size: 16px;
+  padding: 10px;
+  display: block;
+  width: 300px;
+  border: none;
+  background-color :rgb(58, 164, 229);
+}
+
+
+input:focus {
+  outline: none;
+}
+
+
+button{
+  text-decoration: none;
+  display: inline-block;
+  color: white;
+  padding: 10px 10px;
+  margin: 10px 20px;
+  border-radius: 10px;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  background-image: linear-gradient(to right, #9EEFE1 0%, #4830F0 51%, #9EEFE1 100%);
+  background-size: 200% auto;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .1);
+  transition: .5s;
+  border: none;
+}
+
+button:hover {
+  background-position: right center;
+}
+
+
