--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,48 +1,80 @@
 @import './common';
-@import './example';
 
-.search-form {
-display: flex;
-align-items: center;
-justify-content: center;
-gap: 30px;
-background-color: rgb(35, 12, 130);
-padding: 20px;
-};
-input{
-  font-size: 16px;
+body{
+    margin: 0;
+    padding: 0;
+    background-color: rgb(229, 255, 0);
+}
+img {
+    width: 350px;
+    height: 270px;
+
+}
+button {
+    background-color: #d22752;
+    border: none;
+    border-radius: 10px;
+    content: '';
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+.gallery{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap:wrap;
+    gap:20px;
+    margin: 50px;
+}
+.search-form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:10px;
+    background-color: rgb(0, 26, 255);
+    padding: 40px;
+}
+.search-form input {
+  width: 50%;
+  height: 45px;
   padding: 10px;
-  display: block;
-  width: 300px;
-  border: none;
-  background-color :rgb(58, 164, 229);
-}
 
+  font-size: 16px;
 
-input:focus {
   outline: none;
-}
-
-
-button{
-  text-decoration: none;
-  display: inline-block;
-  color: white;
-  padding: 10px 10px;
-  margin: 10px 20px;
-  border-radius: 10px;
-  font-family: 'Montserrat', sans-serif;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  background-image: linear-gradient(to right, #9EEFE1 0%, #4830F0 51%, #9EEFE1 100%);
-  background-size: 200% auto;
-  box-shadow: 0 0 20px rgba(0, 0, 0, .1);
-  transition: .5s;
   border: none;
+  border-radius: 10px;
 }
 
-button:hover {
-  background-position: right center;
+
+.load-more{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.photo-card{
+    background-color: #988b13;
+    margin-bottom: 10px;
+    width: 300px;
+    box-shadow: 0 3px 8px 0 rgb(0 0 0 / 50%);
+    border-radius: 5px;
+    overflow: hidden;
 }
 
 
